@@ -1,6 +1,7 @@
 3.0.6 -> 3.0.7
 	- fix: avoid calling getpass twice as side effect of xstrdup macro
 		(katzj@linuxpower.org) (#17672).
+	- sync python bindings with rpm4.
 
 3.0.5 -> 3.0.6
 	- python bindings to query and verify signatures.
